<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_constr_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="top"
	    android:orientation="vertical" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.1"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/moneyAmountText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/moneyAmount"/>
	
	        <TextView
	            android:id="@+id/moneyAmount"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:orientation="horizontal" >
	
	        <LinearLayout
	            android:id="@+id/inHandLL"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	
	            <Button
	                android:id="@+id/btn_plans"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/plans" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buildedLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_already_built"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/constructed" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal"  >

        <Button
            android:id="@+id/btn_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSpecial"
            android:layout_weight="1"
            android:enabled="false" />

        <Button
            android:id="@+id/btn_players_obs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOtherPlayers"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_end_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTurnEnd"
            android:layout_weight="0.8" />

    </LinearLayout>

	</LinearLayout>
</RelativeLayout>